# FArms_wArms

./: README.md
FArm_wArm/FArm-MMIMDb/: pyproject.toml
FArm_wArm/FArm-MMIMDb/farm/: client_app.py  server_app.py  task.py
FArm_wArm/FArm-MOSI/: pyproject.toml
FArm_wArm/FArm-MOSI/farm/: __init__.py  client_app.py  mosi_reg.py  server_app.py  task.py
FArm_wArm/wArm-MOSI/: mosi_reg.py  mosi_train_reg.py
