# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farm"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers",
    "Pillow",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "tune_clip"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "farm.server_app:app"
clientapp = "farm.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-of-runs = 10
num-rounds-for-sim-train = 2 #it is new one####################################################
num-server-rounds = 5
fraction-train = 0.5
local-epochs = 8
num-supernodes = 10
lr = 0.0005
alpha = 0.1  # Weight for simulation loss
beta = 1.0   # Weight for classification loss

# List of configs to run (comma-separated)
missing-configs = "100_text_100_audio_100_video"
missing-configs = "20_text_20_audio_100_video"
missing-configs = "20_text_100_audio_20_video, 100_text_20_audio_20_video, complex_20_20_20_10_10_10_10"
missing-configs = "20_text_100_audio_100_video, 100_text_20_audio_100_video, 100_text_100_audio_20_video"

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with LOW PARALLELISM (1-2 concurrent clients)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10  # <-- CHANGE: Set to 1 for sequential (or 2 for small batches). Overrides app.config for parallelism.
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0.2  # Keep per-client slice, but now only 1-2 active

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup